--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,5 @@ jobs:
       - name: hello world
         run: echo "hello world"
 
-      - name: Sleep for 10 seconds
-        run: sleep 10
+      # - name: Sleep for 10 seconds
+      #   run: sleep 10
